fixed max offset overflow/ underflow issue

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -51,8 +51,7 @@ body{
 .playListText {
     color: snow;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1.4vmax;
-    font-style: oblique;
+    font-size: 1.6vmax;
     padding-left: 1vmax;
 }
 
